--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^5.1.0",
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@expo-google-fonts/press-start-2p": "^0.2.2",
+    "@react-native-community/datetimepicker": "4.0.0",
     "expo": "~44.0.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
