--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "noImplicitAny": false
+    "noImplicitAny": true,
+    "jsx": "react",
+    "esModuleInterop": true,
+    "strictNullChecks": true
   }
 }
